<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="293dp"
        android:layout_height="193dp"
        android:layout_gravity="center_horizontal|top"

        android:src="@drawable/icon" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/btnLoad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/load_game" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/exit" />



</LinearLayout>
